--- a/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/HostKeyDialog.form
+++ b/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/HostKeyDialog.form
@@ -45,7 +45,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="etched" title-resource-bundle="com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel" title-key="sshKnownHostsLabel"/>
+        <border type="etched" title-resource-bundle="com/l7tech/external/assertions/ssh/console/HostKeyDialog" title-key="sshHostKeyLabel"/>
         <children>
           <scrollpane id="aa360">
             <constraints>
@@ -78,7 +78,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Load From File"/>
+                  <text resource-bundle="com/l7tech/external/assertions/ssh/console/HostKeyDialog" key="loadFromFileLabel"/>
                 </properties>
               </component>
               <vspacer id="cfbca">
