--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="24" y="16" width="870" height="401"/>
+      <xy x="24" y="16" width="786" height="546"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -149,7 +149,7 @@
                   </component>
                 </children>
               </grid>
-              <grid id="c2eef" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="c2eef" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="12" bottom="12" right="12"/>
                 <constraints>
                   <grid row="0" column="2" row-span="5" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="1" indent="1" use-parent-layout="false"/>
@@ -167,19 +167,9 @@
                       <text value="Published &amp;service message input"/>
                     </properties>
                   </component>
-                  <component id="93a4f" class="javax.swing.JCheckBox" binding="cbEnableBuiltinServices" default-binding="true">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <enabled value="true"/>
-                      <selected value="true"/>
-                      <text value="B&amp;uilt-in services"/>
-                    </properties>
-                  </component>
                   <component id="3d65b" class="javax.swing.JCheckBox" binding="cbEnableSsmRemote" default-binding="true">
                     <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <enabled value="true"/>
@@ -189,7 +179,7 @@
                   </component>
                   <component id="a54bf" class="javax.swing.JCheckBox" binding="cbEnableSsmApplet" default-binding="true">
                     <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
+                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <enabled value="true"/>
@@ -199,7 +189,7 @@
                   </component>
                   <component id="5ecf1" class="javax.swing.JCheckBox" binding="cbEnableNode">
                     <constraints>
-                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <selected value="true"/>
@@ -208,7 +198,7 @@
                   </component>
                   <component id="872b8" class="javax.swing.JCheckBox" binding="cbEnablePCAPI">
                     <constraints>
-                      <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <selected value="true"/>
@@ -217,13 +207,115 @@
                   </component>
                   <component id="9ab9b" class="javax.swing.JCheckBox" binding="cbEnableEsmRemote">
                     <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <selected value="true"/>
                       <text value="En&amp;terprise Manager access"/>
                     </properties>
                   </component>
+                  <grid id="7efa0" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="93a4f" class="javax.swing.JCheckBox" binding="cbEnableBuiltinServices" default-binding="true">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <enabled value="true"/>
+                          <selected value="true"/>
+                          <text value="B&amp;uilt-in services"/>
+                          <toolTipText resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.tooltip"/>
+                        </properties>
+                      </component>
+                      <hspacer id="6b089">
+                        <constraints>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </hspacer>
+                      <component id="c42e4" class="javax.swing.JButton" binding="collapseOrExpandButton" default-binding="true">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <icon value="com/l7tech/console/resources/CollapseAll.gif"/>
+                          <margin top="0" left="0" bottom="0" right="0"/>
+                          <text value=""/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
+                  <grid id="21721" binding="builtinServicesPanel" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="2" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <visible value="true"/>
+                    </properties>
+                    <border type="none"/>
+                    <children>
+                      <component id="1c0e9" class="javax.swing.JCheckBox" binding="policyDiscoveryCheckBox" default-binding="true">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.PolicyDiscovery.label"/>
+                          <toolTipText resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.PolicyDiscovery.tooltip"/>
+                        </properties>
+                      </component>
+                      <component id="4431b" class="javax.swing.JCheckBox" binding="stsCheckBox" default-binding="true">
+                        <constraints>
+                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.STS.label"/>
+                          <toolTipText resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.STS.tooltip"/>
+                        </properties>
+                      </component>
+                      <component id="6d702" class="javax.swing.JCheckBox" binding="csrHandlerCheckBox" default-binding="true">
+                        <constraints>
+                          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.CSRHandler.label"/>
+                          <toolTipText resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.CSRHandler.tooltip"/>
+                        </properties>
+                      </component>
+                      <component id="e7f7a" class="javax.swing.JCheckBox" binding="passwordChangeCheckBox" default-binding="true">
+                        <constraints>
+                          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.PasswordChange.label"/>
+                          <toolTipText resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.PasswordChange.tooltip"/>
+                        </properties>
+                      </component>
+                      <component id="c5447" class="javax.swing.JCheckBox" binding="wsdlProxyCheckBox" default-binding="true">
+                        <constraints>
+                          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.WSDLProxy.label"/>
+                          <toolTipText resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.WSDLProxy.tooltip"/>
+                        </properties>
+                      </component>
+                      <component id="465c4" class="javax.swing.JCheckBox" binding="snmpQueryCheckBox" default-binding="true">
+                        <constraints>
+                          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.SNMPQuery.label"/>
+                          <toolTipText resource-bundle="com/l7tech/console/panels/SsgConnectorPropertiesDialog" key="builtin.service.SNMPQuery.tooltip"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
                 </children>
               </grid>
               <vspacer id="b4382">
